--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,45 @@
-// Начните писать стили здесь
+// Миксины и переменные
+@import "./mixins.less";
+@import "./variables.less";
+
+// Базовые стили
+@import "./base/fonts.less";
+@import "./base/base.less";
+
+// Блоки
+@import "./blocks/page.less";
+@import "./blocks/page-header.less";
+@import "./blocks/site-wrapper.less";
+@import "./blocks/logo-link.less";
+// @import "./blocks/page-navigation.less";
+@import "./blocks/site-list.less";
+@import "./blocks/link-navigation.less";
+@import "./blocks/main-container.less";
+@import "./blocks/promo.less";
+@import "./blocks/button.less";
+// @import "./blocks/programs-container.less";
+@import "./blocks/program-list.less";
+@import "./blocks/program.less";
+@import "./blocks/about-us.less";
+@import "./blocks/advantages-list.less";
+@import "./blocks/work-examples.less";
+// @import "./blocks/slider.less";
+// @import "./blocks/slider-button.less";
+@import "./blocks/page-footer.less";
+@import "./blocks/cooperation.less";
+@import "./blocks/social.less";
+@import "./blocks/copyright.less";
+
+//Каталог
+// @import "./blocks/basic-products.less";
+@import "./blocks/basic-products-list.less";
+@import "./blocks/basic-card.less";
+@import "./blocks/container-description.less";
+@import "./blocks/additional-products.less";
+@import "./blocks/additional-products-list.less";
+@import "./blocks/additional-card.less";
+
+//Страница формы
+@import "./blocks/form-program.less";
+@import "./blocks/form-group.less";
+@import "./blocks/form-list.less";
