Дорабатывает разметку по замечаниям

--- a/source/less/blocks/additional-card.less
+++ b/source/less/blocks/additional-card.less
@@ -1,7 +1,7 @@
 .additional-card__title {
   margin: 0;
   font-family: "Oswald", sans-serif;
-  color: #222222;
+  color: @color-title-secondary;
   font-size: 16px;
   font-weight: 400;
   line-height: 16px;
