--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -3,18 +3,18 @@
   box-sizing: border-box;
   padding: 10px 44px;
   font-family: "Oswald", sans-serif;
-  color: #ffffff;
+  color: @color-text-light;
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
   text-decoration: none;
   line-height: 20px;
-  background-color: #68b738;
+  background-color: @color-base-gr;
   border: none;
   cursor: pointer;
 }
 
 .button--show-more {
-  color: #444444;
-  background-color: #f2f2f2;
+  color: @color-text-primary;
+  background-color: @color-bg-dark;
 }
