--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,10 +1,10 @@
 .program {
-  background-color: #f2f2f2;
+  background-color: @color-bg-dark;
 }
 
 .program__title {
   font-family: "Oswald", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 24px;
   font-weight: 400;
   line-height: 37px;
@@ -13,7 +13,7 @@
 
 .program__link {
   font-family: "Oswald", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 16px;
   line-height: 16px;
   text-decoration: none;
