--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,12 +1,12 @@
 .promo {
-  color: #000000;
-  background-color: #ffffff;
+  color: @color-title-primary;
+  background-color: @color-bg-light;
 }
 
 .promo__title--white {
-  color: #ffffff;
+  color: @color-text-light;
 }
 
 .promo__slogan--white {
-  color: #ffffff;
+  color: @color-text-light;
 }
