--- a/source/less/blocks/work-examples.less
+++ b/source/less/blocks/work-examples.less
@@ -6,27 +6,29 @@
   margin: 0;
   padding: 0;
   font-family: "Oswald", sans-serif;
+  color: @color-title-primary;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
 }
 
 .work-examples__number {
+  font-size: 12px;
+  line-height: 12px;
+}
+
+.work-examples__description {
   font-family: "Oswald", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
   text-transform: uppercase;
 }
 
-.work-examples__description {
-  font-size: 12px;
-  line-height: 12px;
-}
-
 .work-examples__number--total-sum {
   font-family: "Oswald", sans-serif;
+  color: @color-title-primary;
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
@@ -34,6 +36,7 @@
 
 .work-examples__description--total-sum {
   font-family: "Oswald", sans-serif;
+  color: @color-title-primary;
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
