--- a/source/less/style.less
+++ b/source/less/style.less
@@ -27,6 +27,7 @@
 // @import "./blocks/slider-button.less";
 @import "./blocks/page-footer.less";
 @import "./blocks/cooperation.less";
+@import "./blocks/map-adress.less";
 @import "./blocks/social.less";
 @import "./blocks/copyright.less";
 
