--- a/source/less/blocks/about-us.less
+++ b/source/less/blocks/about-us.less
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Oswald", sans-serif;
+  color: @color-title-primary;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
