--- a/source/less/blocks/additional-products.less
+++ b/source/less/blocks/additional-products.less
@@ -1,21 +1,21 @@
 .additional-products__title {
   margin: 0;
   font-family: "Oswald", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
 }
 
 .additional-products__wrapper-action {
-  background-color: fade(#68b738, 85%);
+  background-color: fade(@color-base-gr, 85%);
   background-image: url("../../img/green-subsrate.png"),
                     url("../../img/action.png");
   background-repeat: no-repeat;
 }
 
 .additional-products__action-text {
-  color: #ffffff;
+  color: @color-text-light;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
