--- a/source/less/blocks/container-description.less
+++ b/source/less/blocks/container-description.less
@@ -1,7 +1,7 @@
 .container-description__title {
   margin: 0;
   font-family: "Oswald", sans-serif;
-  color: #222222;
+  color: @color-title-secondary;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -9,7 +9,7 @@
 }
 
 .container-description__list {
-  color: #444444;
+  color: @color-text-primary;
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
