--- a/source/less/blocks/cooperation.less
+++ b/source/less/blocks/cooperation.less
@@ -1,14 +1,14 @@
 .cooperation--light {
-  background-color: #ffffff;
+  background-color: @color-bg-light;
 }
 
 .cooperation--dark {
-  background-color: #f2f2f2;
+  background-color: @color-bg-dark;
 }
 
 .cooperation__title {
   font-family: "Oswald", sans-serif;
-  color: #111111;
+  color: @color-text-secondary;
   font-size: 16px;
   font-weight: 400;
   line-height: 26px;
@@ -17,7 +17,7 @@
 
 .cooperation__link {
   font-family: "Lato", sans-serif;
-  color: #444444;
+  color: @color-text-primary;
   font-size: 14px;
   font-weight: 400;
   font-style: normal;
