--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,7 +1,7 @@
 .copyright__link-text {
   display: block;
   font-family: "Lato", sans-serif;
-  color: #444444;
+  color: @color-text-primary;
   font-size: 16px;
   font-weight: 400;
   line-height: 20px;
@@ -10,5 +10,5 @@
 
 .copyright__link-logo {
   display: block;
-  color: #666666;
+  color: @color-logo;
 }
