--- a/source/less/blocks/form-group.less
+++ b/source/less/blocks/form-group.less
@@ -1,5 +1,5 @@
 .form-group__title {
-  color: #000000;
+  color: @color-title-primary;
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
