--- a/source/less/blocks/form-list.less
+++ b/source/less/blocks/form-list.less
@@ -4,7 +4,7 @@
 
 .form-list__field {
   font-family: "Oswald", sans-serif;
-  color: #444444;
+  color: @color-text-primary;
   font-size: 16px;
   font-weight: 400;
   line-height: 18px;
@@ -12,5 +12,5 @@
 }
 
 .form-list__field::placeholder {
-  color: #444444;
+  color: @color-text-primary;
 }
