--- a/source/less/blocks/form-program.less
+++ b/source/less/blocks/form-program.less
@@ -9,7 +9,7 @@
 .form-program__legend {
   margin: 0;
   font-family: "Lato", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
