--- a/source/less/blocks/link-navigation.less
+++ b/source/less/blocks/link-navigation.less
@@ -2,11 +2,11 @@
   font-family: "Oswald", sans-serif;
   font-size: 20px;
   line-height: 20px;
-  color: #000000;
+  color: @color-title-primary;
   text-transform: uppercase;
   text-decoration: none;
 }
 
 .link-navigation--white {
-  color: #ffffff;
+  color: @color-text-light;
 }
