--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -1,7 +1,7 @@
 .main-container__title {
   margin: 0;
   font-family: "Oswald", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
@@ -10,7 +10,7 @@
 .main-container__description {
   margin: 0;
   font-family: "Oswald", sans-serif;
-  color: #000000;
+  color: @color-title-primary;
   font-size: 14px;
   font-weight: 400;
   line-height: 18px;
