--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,5 +1,5 @@
 .page-header {
   padding: 13px 21px 14px 20px;
-  background-color: #ffffff;
-  color: #000000;
+  background-color: @color-bg-light;
+  color: @color-title-primary;
 }
