--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -8,6 +8,6 @@
   font-family: "Lato", sans-serif;
   font-size: 14px;
   line-height: 18px;
-  color: #444444;
-  background-color: #ffffff;
+  color: @color-text-primary;
+  background-color: @color-bg-light;
 }
