--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,3 +1,9 @@
+.copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .copyright__link-text {
   display: block;
   font-family: "Lato", sans-serif;
