--- a/source/less/blocks/form-program.less
+++ b/source/less/blocks/form-program.less
@@ -6,7 +6,30 @@
   text-transform: uppercase;
 }
 
+.form-program__wrapper-content {
+  margin-bottom: 45px;
+}
+
+.form-program__group {
+  margin: 0;
+}
+
+.form-program__group:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.form-program__group:last-child {
+  margin-bottom: 34px;
+}
+
+.form-program__wrapper-legend {
+  display: flex;
+  flex-direction: column;
+  row-gap: 21px;
+}
+
 .form-program__legend {
+  align-self: center;
   margin: 0;
   font-family: "Lato", sans-serif;
   color: @color-title-primary;
@@ -14,4 +37,65 @@
   font-weight: 400;
   line-height: 16px;
   text-transform: none;
+}
+
+@media (min-width: @tablet-width) {
+  .form-program {
+    font-size: 20px;
+    line-height: normal;
+  }
+
+  .form-program__wrapper-content {
+    margin-bottom: 65px;
+  }
+
+  .form-program__group {
+    margin-left: 40px;
+  }
+
+  .form-program__group:not(:last-child) {
+    margin-bottom: 65px;
+  }
+
+  .form-program__group:last-child {
+    margin-bottom: 52px;
+  }
+
+  .form-program__wrapper-legend {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 60px;
+    margin-left: 40px;
+  }
+
+  .form-program__legend {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-program__wrapper-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 80px;
+    margin-bottom: 0;
+  }
+
+  .form-program__group {
+    margin-left: 0;
+  }
+
+  .form-program__group:not(:last-child) {
+    margin-bottom: 70px;
+  }
+
+  .form-program__group:last-child {
+    margin-bottom: 65px;
+  }
+
+  .form-program__wrapper-legend {
+    column-gap: 80px;
+    margin-left: 0;
+  }
 }
