--- a/source/less/blocks/advantages-list.less
+++ b/source/less/blocks/advantages-list.less
@@ -1,5 +1,31 @@
 .advantages-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 26px;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.advantages-list__item {
+  padding-left: 80px;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages-list {
+    flex-direction: row;
+    justify-content: space-between;
+    row-gap: 37px;
+    flex-wrap: wrap;
+  }
+
+  .advantages-list__item {
+    max-width: 249px;
+    padding-top: 151px;
+    padding-bottom: 57px;
+    padding-left: 0;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+  }
 }
