--- a/source/less/blocks/basic-card.less
+++ b/source/less/blocks/basic-card.less
@@ -1,5 +1,66 @@
+.basic-card {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 17px;
+  padding-top: 20px;
+  padding-bottom: 25px;
+}
+
+.basic-card--show-more {
+  flex-direction: column;
+  align-items: center;
+  row-gap: 0;
+  padding-top: 25px;
+}
+
+.basic-card__image {
+  max-width: 140px;
+  max-height: 107px;
+}
+
+.basic-card__container-description {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.basic-card__title {
+  margin: 0;
+  margin-bottom: 14px;
+  max-width: 76px;
+  font-family: "Oswald", sans-serif;
+  color: @color-title-secondary;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.basic-card__list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  color: @color-text-primary;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.basic-card__item {
+  display: flex;
+}
+
+.basic-card__characteristic {
+  margin-right: auto;
+}
+
+.basic-card__meaning {
+  margin: 0;
+}
+
 .basic-card__text-big {
   margin: 0;
+  margin-bottom: 8px;
   font-family: "Oswald", sans-serif;
   color: @color-title-secondary;
   font-size: 16px;
@@ -9,8 +70,98 @@
 }
 
 .basic-card__text-small {
+  margin: 0;
+  margin-bottom: 21px;
   color: @color-text-primary;
   font-size: 12px;
   font-weight: 400;
   line-height: 16px;
+}
+
+.basic-card__button {
+  flex-grow: 1;
+}
+
+.basic-card__button--show-more {
+  margin-bottom: 23px;
+  width: 30px;
+  height: 30px;
+}
+
+@media (min-width: @tablet-width) {
+  .basic-card {
+    flex-direction: column;
+    justify-content: flex-end;
+    padding: 0;
+  }
+
+  .basic-card__image {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%) translateY(-40%);
+    max-width: 200px;
+    max-height: 210px;
+  }
+
+  .basic-card__container-description {
+    margin-bottom: 34px;
+  }
+
+  .basic-card__title {
+    align-self: center;
+    margin-bottom: 20px;
+    max-width: 135px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  .basic-card__list {
+    row-gap: 10px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .basic-card__button {
+    padding: 10px 0;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .basic-card__button--show-more {
+    margin-bottom: 50px;
+    width: 60px;
+    height: 60px;
+  }
+
+  .basic-card__text-big {
+    margin-bottom: 23px;
+    max-width: 134px;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;
+  }
+
+  .basic-card__text-small {
+    margin-bottom: 82px;
+    max-width: 170px;
+    font-size: 16px;
+    line-height: 18px;
+    text-align: center;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .basic-card__button--show-more {
+    margin-bottom: 40px;
+  }
+
+  .basic-card__text-big {
+    margin-bottom: 26px;
+  }
+
+  .basic-card__text-small {
+    margin-bottom: 90px;
+  }
 }
