--- a/source/less/blocks/form-group.less
+++ b/source/less/blocks/form-group.less
@@ -1,6 +1,42 @@
+.form-group {
+  padding: 0;
+  border: none;
+}
+
 .form-group__title {
   color: @color-title-primary;
   font-size: 24px;
   font-weight: 400;
   line-height: 26px;
+}
+
+.form-group__title--contacts {
+  margin-bottom: 35px;
+}
+
+.form-group__title--comments {
+  margin-bottom: 38px;
+}
+
+.form-group__title--additionally {
+  margin-bottom: 36px;
+}
+
+@media (min-width: @tablet-width) {
+  .form-group__title {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
+  .form-group__title--contacts {
+    margin-bottom: 76px;
+  }
+
+  .form-group__title--comments {
+    margin-bottom: 87px;
+  }
+
+  .form-group__title--additionally {
+    margin-bottom: 57px;
+  }
 }
