--- a/source/less/blocks/form-list.less
+++ b/source/less/blocks/form-list.less
@@ -1,5 +1,26 @@
 .form-list {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
   list-style: none;
+}
+
+.form-list--basic {
+  row-gap: 14px;
+  margin-bottom: 22px;
+}
+
+.form-list--target {
+  row-gap: 13px;
+}
+
+.form-list--contacts {
+  row-gap: 14px;
+}
+
+.form-list--additionally {
+  row-gap: 15px;
 }
 
 .form-list__field {
@@ -13,4 +34,47 @@
 
 .form-list__field::placeholder {
   color: @color-text-primary;
+}
+
+@media (min-width: @tablet-width) {
+  .form-list--basic {
+    row-gap: 20px;
+    margin-bottom: 0;
+  }
+
+  .form-list--target {
+    padding: 23px 0 27px 27px;
+    border: 1px solid #e7e7e7;
+  }
+
+  .form-list--contacts {
+    row-gap: 20px;
+  }
+
+  .form-list--additionally {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .form-list__field {
+    font-size: 20px;
+    line-height: normal;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form-list--target {
+    padding: 25px 0 25px 28px;
+    border: 1px solid #e7e7e7;
+  }
+
+  .form-list--contacts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 80px;
+  }
+
+  .form-list--additionally {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
