--- a/source/less/blocks/link-navigation.less
+++ b/source/less/blocks/link-navigation.less
@@ -10,3 +10,13 @@
 .link-navigation--white {
   color: @color-text-light;
 }
+
+@media (min-width: @tablet-width) {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+@media (min-width: @desktop-width) {
+  font-size: 20px;
+  line-height: normal;
+}
