--- a/source/less/blocks/logo-link.less
+++ b/source/less/blocks/logo-link.less
@@ -1,15 +1,69 @@
 .logo-link {
-  display: block;
+  width: 190px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo-link__logo-picture {
+  width: 38px;
   height: 38px;
 }
 
+.logo-link__logo-picture--tablet {
+  width: 38px;
+  height: 38px;
+}
+
+.logo-link__logo-picture--tablet,
+.logo-link__logo-picture--desktop {
+  display: none;
+}
+
 .logo-link__logo-text {
+  width: 101px;
   height: 18px;
 }
 
 .logo-link__logo-text--footer {
+  width: 128px;
   height: 24px;
+}
+
+@media (min-width: @tablet-width) {
+  .logo-link {
+    width: 174px;
+  }
+
+  .logo-link__logo-picture--tablet {
+    display: block;
+    width: 60px;
+    height: 50px;
+  }
+
+  .logo-link__logo-picture--mobile {
+    display: none;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .logo-link {
+    width: 202px;
+  }
+
+  .logo-link__logo-picture--desktop {
+    display: block;
+    width: 70px;
+    height: 59px;
+  }
+
+  .logo-link__logo-picture--mobile,
+  .logo-link__logo-picture--tablet {
+    display: none;
+  }
+
+  .logo-link__logo-text {
+    width: 118px;
+    height: 21px;
+  }
 }
