--- a/source/less/blocks/map-adress.less
+++ b/source/less/blocks/map-adress.less
@@ -1,3 +1,10 @@
 .map-adress {
   max-height: 362px;
+  object-fit: cover;
+}
+
+@media (min-width: @tablet-width) {
+  .map-adress {
+    max-height: 400px;
+  }
 }
