--- a/source/less/blocks/program-list.less
+++ b/source/less/blocks/program-list.less
@@ -1,5 +1,16 @@
 .program-list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+@media (min-width: @desktop-width) {
+  .program-list {
+    flex-direction: row;
+    column-gap: 80px;
+    flex-wrap: wrap;
+  }
 }
