--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,5 +1,21 @@
 .site-list {
   margin: 0;
   padding: 0;
+  display: none;
+  flex-direction: column;
+  align-items: center;
   list-style: none;
+}
+
+.site-list--open {
+  display: flex;
+}
+
+@media (min-width: @tablet-width) {
+  .site-list {
+    display: flex;
+    flex-direction: row;
+    column-gap: 33px;
+    flex-wrap: wrap;
+  }
 }
