--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,5 +1,18 @@
 .social__list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 24px;
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.social__link {
+  box-sizing: border-box;
+  display: block;
+  width: 28px;
+  height: 22px;
+  color: @color-logo;
+  text-decoration: none;
 }
