--- a/source/less/blocks/work-examples.less
+++ b/source/less/blocks/work-examples.less
@@ -1,10 +1,16 @@
 .work-examples {
+  position: relative;
+  padding-bottom: 40px;
   background-color: #eaeaea;
+}
+
+.work-examples__wrapper-title {
+  padding-top: 25px;
+  padding-bottom: 40px;
 }
 
 .work-examples__title {
   margin: 0;
-  padding: 0;
   font-family: "Oswald", sans-serif;
   color: @color-title-primary;
   font-size: 36px;
@@ -12,17 +18,51 @@
   font-weight: 400;
 }
 
+.work-examples__wrapper-description {
+  padding-bottom: 276px;
+}
+
+.work-examples__text {
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.work-examples__list {
+  margin: 0;
+  margin-bottom: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 32px;
+  row-gap: 20px;
+}
+
+.work-examples__item {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  min-width: 124px;
+}
+
+.work-examples__item--total-sum {
+  margin: 0 auto;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .work-examples__number {
   font-size: 12px;
   line-height: 12px;
+  text-align: center;
 }
 
 .work-examples__description {
+  margin: 0;
   font-family: "Oswald", sans-serif;
   color: @color-title-primary;
   font-size: 24px;
   font-weight: 400;
   line-height: 24px;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -40,4 +80,127 @@
   font-size: 14px;
   line-height: 20px;
   text-transform: uppercase;
+}
+
+.work-examples__slider {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-140px);
+}
+
+@media (min-width: @tablet-width) {
+  .work-examples {
+    padding-bottom: 462px;
+  }
+
+  .work-examples__wrapper-title-substrate {
+    background-color: @color-bg-light;
+  }
+
+  .work-examples__wrapper-description-substrate {
+    background-color: @color-bg-light;
+  }
+
+  .work-examples__wrapper-title {
+    padding-top: 45px;
+    padding-bottom: 60px;
+    background-color: @color-bg-light;
+  }
+
+  .work-examples__title {
+    font-size: 60px;
+    line-height: 60px;
+  }
+
+  .work-examples__wrapper-description {
+    padding-bottom: 250px;
+    background-color: @color-bg-light;
+  }
+
+  .work-examples__text {
+    margin-bottom: 55px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .work-examples__item--total-sum {
+    margin: 0;
+    margin-left: auto;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  .work-examples__number {
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  .work-examples__description {
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  .work-examples__number--total-sum {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .work-examples__description--total-sum {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .work-examples__slider {
+    bottom: 101px;
+    transform: translateX(-280px);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .work-examples {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .work-examples__wrapper-description-substrate {
+    background-color: #eaeaea;
+  }
+
+  .work-examples__wrapper-title {
+    padding-bottom: 76px;
+  }
+
+  .work-examples__wrapper-description {
+    padding-top: 70px;
+    padding-right: 790px;
+    padding-bottom: 75px;
+    background-color: #eaeaea;
+  }
+
+  .work-examples__text {
+    margin-bottom: 69px;
+  }
+
+  .work-examples__list {
+    column-gap: 42px;
+    row-gap: 55px;
+  }
+
+  .work-examples__item--total-sum {
+    margin: 0;
+    margin-right: auto;
+    margin-left: 0;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .work-examples__number--total-sum {
+    margin-right: 63px;
+  }
+
+  .work-examples__slider {
+    bottom: 85px;
+    transform: translateX(80px);
+  }
 }
