--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,7 +11,7 @@
 @import "./blocks/page-header.less";
 @import "./blocks/site-wrapper.less";
 @import "./blocks/logo-link.less";
-// @import "./blocks/page-navigation.less";
+@import "./blocks/page-navigation.less";
 @import "./blocks/site-list.less";
 @import "./blocks/link-navigation.less";
 @import "./blocks/main-container.less";
@@ -23,7 +23,7 @@
 @import "./blocks/about-us.less";
 @import "./blocks/advantages-list.less";
 @import "./blocks/work-examples.less";
-// @import "./blocks/slider.less";
+@import "./blocks/slider.less";
 // @import "./blocks/slider-button.less";
 @import "./blocks/page-footer.less";
 @import "./blocks/cooperation.less";
@@ -35,7 +35,6 @@
 // @import "./blocks/basic-products.less";
 @import "./blocks/basic-products-list.less";
 @import "./blocks/basic-card.less";
-@import "./blocks/container-description.less";
 @import "./blocks/additional-products.less";
 @import "./blocks/additional-products-list.less";
 @import "./blocks/additional-card.less";
