--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -4,9 +4,7 @@
 }
 
 .promo__wrapper {
-  position: relative;
-  display: flex;
-  flex-direction: column;
+  display: grid;
 }
 
 .promo__title {
@@ -44,12 +42,12 @@
 
 @media (min-width: @tablet-width) {
   .promo__wrapper {
-    padding-bottom: 526px;
+    grid-template-rows: auto auto auto;
     padding-left: 90px;
-    align-items: flex-start;
   }
 
   .promo__title {
+    grid-row: 1/2;
     margin-bottom: 40px;
     max-width: 450px;
     text-align: left;
@@ -58,38 +56,65 @@
   }
 
   .promo__slogan {
-    margin-bottom: 50px;
+    grid-row: 2/3;
+    margin-bottom: 21px;
+    text-align: left;
     font-size: 20px;
     line-height: 20px;
   }
 
   .promo__image {
+    grid-row: 3/4;
+    grid-column: 1/-1;
     max-height: 609px;
-    position: absolute;
-    top: 201px;
-    left: 40px;
-    z-index: 0;
   }
 
   .promo__button {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    align-self: self-start;
+    margin-top: 29px;
+    margin-right: auto;
     z-index: 1;
   }
 }
 
 @media (min-width: @desktop-width) {
   .promo__wrapper {
-    padding-top: 81px;
-    padding-bottom: 184px;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: repeat(4, auto);
     padding-left: 80px;
   }
 
+  .promo__title {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin-top: 110px;
+    margin-bottom: 40px;
+  }
+
   .promo__slogan {
+    grid-row: 2/3;
+    grid-column: 1/2;
     margin-bottom: 52px;
   }
 
   .promo__image {
-    max-height: 499px;
-    top: 0;
-    left: 184px;
+    grid-row: 1/-1;
+    grid-column: 2/3;
+    margin-top: 29px;
+    margin-bottom: 0;
+    margin-left: -47px;
+    max-width: 552px;
+    height: 499px;
+  }
+
+  .promo__button {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    align-self: self-start;
+    margin-top: 0;
+    margin-right: auto;
+    z-index: 1;
   }
 }
