Исправляет позиционирование слайдера

--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -81,7 +81,7 @@
 
 @media (min-width: @desktop-width) {
   .promo__wrapper {
-    grid-template-columns: auto 1fr;
+    grid-template-columns: 420px 1fr;
     grid-template-rows: repeat(4, auto);
     padding-left: 80px;
   }
