--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -1,16 +1,23 @@
 .slider {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
   min-height: 256px;
 }
 
 .slider__image {
-  position: absolute;
-  display: block;
+  grid-column: 1/-1;
+  grid-row: 1/-1;
+  margin: 0 auto;
   width: 280px;
   height: 256px;
 }
 
 .slider__button {
   position: absolute;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(50%, 50%);
 }
 
 @media (min-width: @tablet-width) {
