--- a/source/less/blocks/work-examples.less
+++ b/source/less/blocks/work-examples.less
@@ -1,7 +1,14 @@
 .work-examples {
-  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
   padding-bottom: 40px;
   background-color: #eaeaea;
+}
+
+.work-examples__wrapper-title-substrate {
+  grid-column: 1/-1;
+  grid-row: 1/2;
 }
 
 .work-examples__wrapper-title {
@@ -18,8 +25,13 @@
   font-weight: 400;
 }
 
+.work-examples__wrapper-description-substrate {
+  grid-column: 1/-1;
+  grid-row: 2/3;
+}
+
 .work-examples__wrapper-description {
-  padding-bottom: 276px;
+  margin-bottom: 20px;
 }
 
 .work-examples__text {
@@ -29,7 +41,6 @@
 
 .work-examples__list {
   margin: 0;
-  margin-bottom: 20px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 32px;
@@ -83,15 +94,13 @@
 }
 
 .work-examples__slider {
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-140px);
+  grid-column: 2/3;
+  grid-row: 3/4;
 }
 
 @media (min-width: @tablet-width) {
   .work-examples {
-    padding-bottom: 462px;
+    padding-bottom: 101px;
   }
 
   .work-examples__wrapper-title-substrate {
@@ -152,23 +161,35 @@
   }
 
   .work-examples__slider {
-    bottom: 101px;
-    transform: translateX(-280px);
+    margin-top: -152px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .work-examples {
+    grid-template-columns: auto 1220px auto;
     padding-top: 0;
     padding-bottom: 0;
+    background-color: @color-bg-light;
   }
 
-  .work-examples__wrapper-description-substrate {
-    background-color: #eaeaea;
+  .work-examples__wrapper-title-substrate {
+    grid-column: 2/3;
+    grid-row: 1/2;
   }
 
   .work-examples__wrapper-title {
     padding-bottom: 76px;
+  }
+
+  .work-examples__title {
+    max-width: 600px;
+  }
+
+  .work-examples__wrapper-description-substrate {
+    grid-column: 1/-1;
+    grid-row: 2/4;
+    background-color: #eaeaea;
   }
 
   .work-examples__wrapper-description {
@@ -200,7 +221,9 @@
   }
 
   .work-examples__slider {
-    bottom: 85px;
-    transform: translateX(80px);
+    grid-column: 2/3;
+    grid-row: 1/-1;
+    margin-top: 0;
+    margin-left: auto;
   }
 }
