--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,9 +1,15 @@
+.social {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
 .social__list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 24px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   list-style: none;
 }
@@ -15,4 +21,15 @@
   height: 22px;
   color: @color-logo;
   text-decoration: none;
+
+  &:hover {
+    color: @color-base-gr;
+    transition: 0.7s;
+  }
+
+  &:active {
+    color: @color-base-gr;
+    opacity: 0.3;
+    transition: 0.7s;
+  }
 }
