--- a/source/less/style.less
+++ b/source/less/style.less
@@ -17,14 +17,12 @@
 @import "./blocks/main-container.less";
 @import "./blocks/promo.less";
 @import "./blocks/button.less";
-// @import "./blocks/programs-container.less";
 @import "./blocks/program-list.less";
 @import "./blocks/program.less";
 @import "./blocks/about-us.less";
 @import "./blocks/advantages-list.less";
 @import "./blocks/work-examples.less";
 @import "./blocks/slider.less";
-// @import "./blocks/slider-button.less";
 @import "./blocks/page-footer.less";
 @import "./blocks/cooperation.less";
 @import "./blocks/map-adress.less";
@@ -32,7 +30,7 @@
 @import "./blocks/copyright.less";
 
 //Каталог
-// @import "./blocks/basic-products.less";
+@import "./blocks/basic-products.less";
 @import "./blocks/basic-products-list.less";
 @import "./blocks/basic-card.less";
 @import "./blocks/additional-products.less";
