--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -9,6 +9,8 @@
 
 //Цвет состояний
 @color-base-gr: #68b738;
+@color-active-gr: #5eaa2f;
+@color-invalid: #ff8282;
 
 //Цвет фона
 @color-bg-light: #ffffff;
