--- a/source/less/blocks/basic-products-list.less
+++ b/source/less/blocks/basic-products-list.less
@@ -18,11 +18,41 @@
 }
 
 .basic-products-list__item {
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 768px;
+    height: 1px;
+    background-color: #ebebeb;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -100%;
+    width: 768px;
+    height: 1px;
+    background-color: #ebebeb;
+  }
+
   @media (min-width: @tablet-width) {
     position: relative;
     box-sizing: border-box;
     padding: 151px 37px 40px 37px;
     background-color: @color-bg-dark;
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      display: none;
+    }
   }
 }
 
