--- a/source/less/blocks/form-list.less
+++ b/source/less/blocks/form-list.less
@@ -8,7 +8,35 @@
 
 .form-list--basic {
   row-gap: 14px;
-  margin-bottom: 22px;
+
+  & .form-list__field {
+    box-sizing: border-box;
+    margin-left: 13px;
+    padding: 11px 20px;
+    border: none;
+    outline: 1px solid #e7e7e7;
+    flex-grow: 1;
+
+    &:hover {
+      outline-color: #cdcdcd;
+    }
+
+    &:focus {
+      border: none;
+      outline: 2px solid #444444;
+    }
+
+    &:focus:invalid {
+      border: none;
+      outline: 2px solid @color-invalid;
+    }
+
+    &:disabled {
+      border: none;
+      outline: 1px solid #e7e7e7;
+      background-color: #cdcdcd;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     row-gap: 20px;
@@ -17,15 +45,16 @@
 }
 
 .form-list--target {
-  row-gap: 13px;
+  row-gap: 25px;
 
   @media (min-width: @tablet-width) {
-    padding: 23px 0 27px 27px;
+    row-gap: 23px;
+    padding: 28px 0 32px 27px;
     border: 1px solid #e7e7e7;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 25px 0 25px 28px;
+    padding: 30px 0 30px 28px;
     border: 1px solid #e7e7e7;
   }
 }
@@ -33,28 +62,95 @@
 .form-list--contacts {
   row-gap: 14px;
 
+  & .form-list-item {
+    position: relative;
+  }
+
+  & .form-list__field {
+    box-sizing: border-box;
+    margin-left: 13px;
+    padding: 14px 50px 13px 15px;
+    border: none;
+    outline: 1px solid #e7e7e7;
+    flex-grow: 1;
+
+    &:hover {
+      outline-color: #cdcdcd;
+    }
+
+    &:invalid {
+      border: none;
+      outline: 2px solid @color-invalid;
+    }
+
+    &:focus {
+      border: none;
+      outline: 2px solid #444444;
+    }
+
+    &:disabled {
+      border: none;
+      outline: 1px solid #e7e7e7;
+      background-color: #cdcdcd;
+    }
+
+    &:invalid + .form-list__field-icon path {
+      stroke: @color-invalid;
+    }
+
+    &:focus + .form-list__field-icon path {
+      stroke: @color-base-gr;
+    }
+  }
+
+  & .form-list__field-icon {
+    position: absolute;
+    top: 13px;
+    right: 12px;
+  }
+
   @media (min-width: @tablet-width) {
     row-gap: 20px;
+
+    & .form-list__field {
+      padding: 11px 50px 11px 20px;
+    }
+
+    & .form-list__field-icon {
+      top: 16px;
+      right: 14px;
+    }
   }
 
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
+
+    & .form-list__field-icon {
+      right: 16px;
+    }
   }
 }
 
 .form-list--additionally {
-  row-gap: 15px;
+  row-gap: 24px;
 
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    row-gap: 42px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: repeat(4, 1fr);
   }
+}
+
+.form-list__item {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .form-list__field {
@@ -73,4 +169,75 @@
 
 .form-list__field::placeholder {
   color: @color-text-primary;
+}
+
+.form-list__control {
+  position: relative;
+  display: block;
+  padding-left: 45px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 60px;
+  }
+}
+
+.form-list__control-mark {
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  width: 30px;
+  height: 30px;
+  border: 1px solid #cdcdcd;
+
+  &--radio {
+    border-radius: 50%;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.form-list__control:hover .form-list__control-mark {
+  border-color: #bababa;
+}
+
+.form-list__control-field:focus + .form-list__control-mark {
+  outline: 2px solid #000000;
+}
+
+.form-list__control-field:disabled + .form-list__control-mark {
+  border-color: #bababa;
+  opacity: 0.3;
+}
+
+.form-list__control-field:disabled ~ .form-list__title--control {
+  opacity: 0.3;
+}
+
+.form-list__control-field[type="checkbox"]:checked + .form-list__control-mark::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: url("../../img/field-icon-tick.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: clip;
+}
+
+.form-list__control-field[type="radio"]:checked + .form-list__control-mark::before {
+  content: "";
+  position: absolute;
+  top: 25%;
+  right: 25%;
+  width: 50%;
+  height: 50%;
+  background-color: @color-base-gr;
+  border-radius: 50%;
 }
