--- a/source/less/blocks/form-program.less
+++ b/source/less/blocks/form-program.less
@@ -12,12 +12,6 @@
 }
 
 .form-program__wrapper-content {
-  margin-bottom: 45px;
-
-  @media (min-width: @tablet-width) {
-    margin-bottom: 65px;
-  }
-
   @media (min-width: @desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -28,33 +22,24 @@
 
 .form-program__group {
   margin: 0;
-
-  @media (min-width: @tablet-width) {
-    margin-left: 40px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-left: 0;
-  }
-}
-
-.form-program__group:not(:last-child) {
   margin-bottom: 24px;
 
   @media (min-width: @tablet-width) {
+    margin-left: 40px;
     margin-bottom: 65px;
   }
 
   @media (min-width: @desktop-width) {
+    margin-left: 0;
     margin-bottom: 70px;
   }
 }
 
-.form-program__group:last-child {
-  margin-bottom: 34px;
+.form-program__group--comments {
+  margin-bottom: 40px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 52px;
+    margin-bottom: 57px;
   }
 
   @media (min-width: @desktop-width) {
