--- a/source/less/blocks/link-navigation.less
+++ b/source/less/blocks/link-navigation.less
@@ -6,6 +6,14 @@
   text-transform: uppercase;
   text-decoration: none;
 
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 18px;
     line-height: 24px;
@@ -14,9 +22,9 @@
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: normal;
-  }
-}
 
-.link-navigation--white {
-  color: @color-text-light;
+    &--white {
+      color: @color-text-light;
+    }
+  }
 }
