--- a/source/less/blocks/logo-link.less
+++ b/source/less/blocks/logo-link.less
@@ -4,6 +4,16 @@
   justify-content: space-between;
   align-items: center;
 
+  &:hover {
+    opacity: 0.8;
+    transition: 0.7s;
+  }
+
+  &:active {
+    opacity: 0.6;
+    transition: 0.7s;
+  }
+
   @media (min-width: @tablet-width) {
     width: 174px;
   }
