--- a/source/less/blocks/map-adress.less
+++ b/source/less/blocks/map-adress.less
@@ -1,8 +1,18 @@
 .map-adress {
-  max-height: 362px;
-  object-fit: cover;
+  height: 362px;
 
   @media (min-width: @tablet-width) {
-    max-height: 400px;
+    min-height: 400px;
   }
+
+  @media (min-width: @desktop-width) {
+    height: 100%;
+  }
+}
+
+.map-adress iframe {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
